@@ -1,0 +1,18 @@
+IF
+Global("GaalSpoke","AR0900",1)
+InParty("RChloe")
+!Class(Player1,CLERIC)
+!Class(Player1,FIGHTER_CLERIC)
+!Class(Player1,CLERIC_MAGE)
+!Class(Player1,CLERIC_THIEF)
+!Class(Player1,FIGHTER_MAGE_CLERIC)
+!Class(Player1,CLERIC_RANGER)
+!Kit(Player1,GODHELM)
+!Kit(Player1,GODTALOS)
+THEN
+RESPONSE #100
+Wait(2)
+CreateCreature("bharval",[3077.1630],13) 
+SetGlobal("GoodMask","AR0900",1)
+SetGlobal("GaalSpoke","AR0900",2)
+END
